Bug 593286. Use the frame/view system to determine parent documents, not the docshell because the docshell hierarchy doesn't stay intact during page tranisition. r=roc a=blocking final